# wtw-running

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
picker/: Cargo.toml
picker/src/: error.rs  gear.rs  inputs.rs  lib.rs  weather.rs
skill/: .gitignore  Cargo.toml  build.sh
skill/src/: error.rs  location.rs  main.rs  outfit_intent.rs
src/: gear.rs  inputs.rs  main.rs  weather.rs
