[package]
name = "wtw-running"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kesyog/wtw-running"
repository = "https://github.com/kesyog/wtw-running"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2.1"
openweather = { git = "https://github.com/kesyog/openweather"}
dotenv = "0.15.0"
