[package]
name = "skill"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
picker = { path = "../picker" }
alexa_sdk = "^0.1.5"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
anyhow = "^1.0"
openweather = { git = "https://github.com/caemor/openweather"}
simple_logger = "^1"
log = "^0.4"
tokio = { version = "^0.2", features = ["full"] }
